# python_airbnb

./: pyproject.toml
common/: models.py
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py
practice/: practice.py
rooms/: admin.py  models.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avata.py
