[tool.poetry]
name = "python-airbnb"
version = "0.1.0"
description = ""
authors = ["ophnsjh0 <61132132+ophnsjh0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_airbnb"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
